cluster/apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pufferpanel
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.1.147
  ports:
    - port: 8096
